--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,20 +7,29 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.evilsoft.pathfinder.spellbook.MainActivity"
+            android:name=".MainActivity"
+            android:theme="@style/Theme.Sherlock"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".FindActivity"
+            android:theme="@style/Theme.Sherlock"
+            >
         </activity>
     </application>
 
