Creating spellbooks and adding items now works.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,25 +16,39 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.Sherlock"
-            android:label="@string/app_name" >
-        </activity>
-        <activity
             android:label="@string/app_name"
             android:name=".FindActivity"
             android:theme="@style/Theme.Sherlock"
+            android:windowSoftInputMode="stateHidden"
             >
         </activity>
         <activity
-            android:name="org.evilsoft.pathfinder.spellbook.login.LoginActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:name=".SpellbookActivity"
+            android:theme="@style/Theme.Sherlock"
+            android:windowSoftInputMode="stateHidden"
+            >
+        </activity>
+        <activity
+            android:name="org.evilsoft.pathfinder.spellbook.MainActivity"
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden"
+             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".data.SpellBookProvider"
+            android:exported="false"
+            android:syncable="true" />
+        <provider
+            android:authorities="@string/content_authority_spell"
+            android:name=".data.SpellBookSpellProvider"
+            android:exported="false"
+            android:syncable="true" />
+        </application>
 
 </manifest>
